# Neuro-Symbiosis

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: bci2a_quick.yaml  bci2a_template.yaml  default.yaml  quick.yaml
docs/: energy_mechanism_hypothesis.md  literature_notes.md  neurips_rebuild_plan.md  research_plan.md
paper/: Neuro-Symbiosis_Draft_v1_zh.md
scripts/: download_eegmmidb.sh  preprocess_bci2a_npz.py  publish_github.sh  run_baselines.sh  run_dp_sweep.sh  run_quickstart.sh
src/neuro_symbiosis/: bci2a_loso.py  benchmark_baselines.py  config.py  coupling_analysis.py  dp_mia_eval.py  dp_sweep.py  eval_energy.py  eval_privacy.py  loso_pilot.py  multiseed_benchmark.py  train.py
src/neuro_symbiosis/data/: bci_iv_2a.py  eeg_synthetic.py  eegmmidb_stub.py  factory.py  loso_split.py
src/neuro_symbiosis/models/: factory.py  hybrid_decoder.py  snn_baseline.py  snn_encoder.py  transformer_baseline.py
tests/: test_factory.py  test_forward.py
